--- a/3.html
+++ b/3.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>WEB1 - JavaScript</title>
-<meta charset="utf-8">
+    <title>WEB1 - JavaScript</title>
+    <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164475419-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164475419-1');
+    </script>
+
 </head>
+
 <body>
     <h1><a href="index.html"> WEB</a> </h1>
     <ol>
@@ -13,7 +25,13 @@
     </ol>
     <h2>JavaScript</h2>
     <p>
-        JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
+        JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed,
+        prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one
+        of the three core technologies of World Wide Web content production. It is used to make webpages interactive and
+        provide online programs, including video games. The majority of websites employ it, and all modern web browsers
+        support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript
+        engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some
+        engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
     </p>
     <p>
         <div id="disqus_thread"></div>
@@ -40,4 +58,5 @@
 
     </p>
 </body>
+
 </html>
